# Tellas

./: .directory  .gitignore  CMakeLists.txt  OpenGLProject.ipr  OpenGLProject.iws  README.md  Shader.cpp  Shader.h  build.sh  jni.sh  main.cpp
classes/: Camera.cpp  Camera.h  Cube.h  CubeModel.cpp  CubeModel.h  Model.cpp  Model.h  Model2D.cpp  Model2D.h  Model3D.cpp  Model3D.h  Shader.cpp  Shader.h  Shape.h  SquareModel.cpp  SquareModel.h  WorldModel.cpp  WorldModel.h
include/: stb_image.h
include/glad/: glad.h
include/glfw-3.2.1/: CMakeLists.txt
include/glfw-3.2.1/docs/: input.dox
include/glm/: CMakeLists.txt  fwd.hpp  glm.hpp  vector_relational.hpp
include/glm/ext/: scalar_relational.inl  scalar_ulp.hpp  vector_relational.inl
include/glm/gtc/: color_space.hpp  integer.hpp  matrix_inverse.hpp  matrix_transform.hpp  noise.hpp  packing.inl  random.inl  round.hpp
include/glm/gtx/: color_encoding.hpp  common.hpp  compatibility.hpp  dual_quaternion.hpp  easing.hpp  hash.hpp  integer.hpp  matrix_decompose.hpp  number_precision.hpp  quaternion.hpp  rotate_normalized_axis.hpp  rotate_vector.hpp  scalar_multiplication.hpp  std_based_type.hpp  string_cast.hpp  texture.hpp  transform.hpp  vector_angle.hpp  wrap.hpp
java/: Block.scala  Dirt.scala  Main.java  Main.scala  Tellas.scala  jni_GLWrapper.cpp  jni_GLWrapper.h  jni_Shape.cpp  jni_Utilities.h
java/cpp/: jni_Camera.cpp  jni_Camera.h  jni_ComplexEnum.h  jni_Cube.cpp  jni_Cube.h  jni_Framebuffer.cpp  jni_Framebuffer.h  jni_GLWrapper.cpp  jni_GLWrapper.h  jni_KeyListener.cpp  jni_KeyListener.h  jni_Model.h  jni_Player.cpp  jni_Player.h  jni_Projection.h  jni_Rotation.h  jni_Shader.cpp  jni_Shader.h  jni_Shape.cpp  jni_Shape.h  jni_SkyBox.cpp  jni_SkyBox.h  jni_Viewport.cpp  jni_Viewport.h
java/jni/: Camera.scala  ComplexEnum.scala  Cube.scala  Framebuffer.scala  GLWrapper.java  GLWrapper.scala  KeyListener.scala  Model.java  Player.scala  Shader.scala  Shape.java  Shape.scala  SkyBox.scala  Utilities.java  Vector3.java  Vector3.scala  Viewport.scala
java/src/: Air.scala  Block.scala  BlockInstance.scala  Chunk.scala  ChunkLoader.scala  Collidable.scala  Data.scala  Dirt.scala  FixedLandscape.scala  HashLandscape.scala  Image.scala  Landscape.scala  Model.java  Perlin.scala  Vector3.scala  Vector3F.scala  Vector3I.scala
java/src/block/: Air.scala  Block.scala  BlockInstance.scala  Dirt.scala  Grass.scala  Model.java  Stone.scala
java/src/util/: FastFixedLandscape.scala  FixedLandscape.scala  FixedLandscape2D.scala  HashLandscape.scala  Landscape.scala  Types.scala  Vector2.scala  Vector2F.scala  Vector2I.scala  Vector3.scala  Vector3F.scala  Vector3I.scala
shaders/: 2dImage.vert  3dImage.frag  3dImage.vert  empty.frag  fragmentShader.frag  instanceBlock.vert  item.frag  item.vert  shadow.frag  skyBox.vert  vertexShader.vert
src/: data.cpp  frame.cpp  framebuffer.cpp  glad.c  include.cpp  init.cpp  preInit.cpp
tests/: LandscapeTest.scala
(+2 files in other folders)
